--- a/cursomc/src/main/resources/application.properties
+++ b/cursomc/src/main/resources/application.properties
@@ -4,8 +4,8 @@ default.sender=gabriel.fbergamim@gmail.com
 default.recipient=gabriel.fbergamim@gmail.com
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=gabriel.fbergamim@gmail.com
+spring.mail.password=qazwsx159
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
